# odoodb-synth

./: .gitignore  AGENT_PROMPT.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  TESTING.md  pyproject.toml
.github/workflows/: ci.yml
docker/: .env.example  01-init-anon.sql  docker-compose.scratch.yml
odoo_synth/: __init__.py  cli.py
odoo_synth/adapters/: __init__.py  odoo_sh.py  self_hosted.py
odoo_synth/core/: __init__.py  coverage.py  mask.py  package.py  pgtools.py  provenance.py  provision.py  replica.py  rulebook.py  schema.py
rules/: 00_strategies.yml  05_patterns.yml  10_core.yml  20_accounting.yml  21_operations.yml  30_hr.yml  40_messaging.yml  50_attachments.yml  55_module_metadata.yml  60_system_secrets.yml  70_sales_crm_website.yml  README.md
sql/: apply_shuffles.sql  bootstrap.sql
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_mask.py  test_provision_fallback.py  test_round_trip_provision.py  test_scan_cli.py  test_snapshot_cli.py
tests/unit/: test_coverage.py  test_odoo_sh_ingest.py  test_provenance.py  test_replica.py  test_rulebook_validation.py  test_sql_functions.py
