[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-synth"
version = "0.1.0"
description = "Masks PII in an Odoo v19 database backup and provisions a fresh, prod-shaped Odoo instance from the masked result."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sthala Technologies" }]
keywords = ["odoo", "anonymization", "pii", "postgresql", "postgres-anonymizer", "anon"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Security",
    "Intended Audience :: Developers",
]
dependencies = [
    "typer>=0.12",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
parquet = ["duckdb>=0.10"]
dev = ["pytest>=8.0"]

[project.scripts]
odoo-synth = "odoo_synth.cli:app"

[tool.setuptools.packages.find]
include = ["odoo_synth*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
